[package]
name = "bgpkit-collector-peers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = {version="0.11", features=["blocking", "json"]}
serde = {version="1", features=["derive"]}
serde_json = {version = "1.0", features = ["std"]}

env_logger = "0.9.0"
log="0.4.14"

rayon="1.5.1"

bgpkit-parser = "0.6.0-rc.7"
bgp-models = "0.6.0-rc.3"