[package]
name = "sonatel-dec-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bgpkit-broker = "0.3.2"
bgpkit-parser = "0.7.0-alpha.4"
flate2 = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3.3"

rayon = "1.5"